--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ body{
   justify-content: center;
   margin-top: 100px;
 }
+* {
+  -webkit-tap-highlight-color: transparent;
+}
 #calculator {
   width: 500px;
   height: 500px;
